--- a/app/src/main/res/layout/activity_gallery_images.xml
+++ b/app/src/main/res/layout/activity_gallery_images.xml
@@ -1,14 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ashi.a1myapplication.Gallery">
-    <!-- TODO: Update blank fragment layout -->
+    tools:context="com.example.ashi.a1myapplication.Gallery_images">
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="2"
-        android:id="@+id/gridview">
+        android:id="@+id/gridview1">
     </GridView>
 </LinearLayout>
