paytm page created

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -92,6 +92,32 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Are you ?"
+        android:textColor="#000"
+        android:layout_marginTop="10dp"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:id="@+id/radiogroup"
+        android:orientation="horizontal">
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radiobutton1"
+            android:text="ACM Member"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radiobutton2"
+            android:text="Non ACM Member"/>
+    </RadioGroup>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Semester"
         android:textColor="#000"
         android:layout_marginTop="10dp"
@@ -112,12 +138,11 @@
         android:textSize="17sp"
         android:textColor="#000"
         android:textStyle="bold" />
-
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:id="@+id/Event">
+        android:id="@+id/event">
     </Spinner>
     <Button
         android:layout_width="wrap_content"
