--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="#EEEEEE"
     tools:context="com.example.ashi.a1myapplication.Register">
 
     <!-- TODO: Update blank fragment layout -->
