--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -6,4 +6,9 @@
     android:orientation="vertical"
     tools:context="com.example.ashi.a1myapplication.AboutUs">
     <!-- TODO: Update blank fragment layout -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Thisis about us page"/>
 </LinearLayout>
