--- a/app/src/main/res/layout/activity_gallery_images.xml
+++ b/app/src/main/res/layout/activity_gallery_images.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context="com.example.ashi.a1myapplication.Gallery_images">
     <GridView
         android:layout_width="match_parent"
