--- a/app/src/main/res/layout/activity_gallery_images.xml
+++ b/app/src/main/res/layout/activity_gallery_images.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,21 @@
     android:orientation="vertical"
     android:background="@drawable/background"
     tools:context="com.example.ashi.a1myapplication.Gallery_images">
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="150dp"
+        android:visibility="visible"/>
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="2"
+        android:layout_marginLeft="10dp"
         android:id="@+id/gridview1">
     </GridView>
-</LinearLayout>
+</RelativeLayout>
