--- a/app/src/main/res/layout/fragment_departments.xml
+++ b/app/src/main/res/layout/fragment_departments.xml
@@ -5,9 +5,9 @@
     tools:context="com.example.ashi.a1myapplication.Departments">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Departments" />
-
+        android:id="@+id/departments">
+    </ListView>
 </FrameLayout>
