--- a/app/src/main/res/layout/activity_gallery_images.xml
+++ b/app/src/main/res/layout/activity_gallery_images.xml
@@ -9,10 +9,8 @@
     tools:context="com.example.ashi.a1myapplication.Gallery_images">
     <ProgressBar
         android:id="@+id/progress"
-        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center"
         android:layout_marginStart="150dp"
@@ -21,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="2"
-        android:layout_marginLeft="10dp"
+        android:padding="5dp"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
         android:id="@+id/gridview1">
     </GridView>
 </RelativeLayout>
