--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,10 +8,8 @@
     <!-- TODO: Update blank fragment layout -->
     <ProgressBar
         android:id="@+id/progress"
-        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center"
         android:layout_marginStart="150dp"
@@ -20,7 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="2"
-        android:layout_marginLeft="10dp"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="10dp"
+        android:padding="5dp"
         android:id="@+id/gridview">
     </GridView>
 </RelativeLayout>
