--- a/app/src/main/res/layout/swipefragment2.xml
+++ b/app/src/main/res/layout/swipefragment2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -12,25 +12,49 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:textColor="#000"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:id="@+id/title"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <ImageView
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:id="@+id/department_image"
         android:layout_marginTop="15dp"
         android:src="@mipmap/acmlogo"/>
+        <TextView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="Current Head"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/head"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:textColor="#000"/>
+        </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:textSize="18sp"
         android:layout_marginTop="25dp"
         android:textColor="#000"
         android:id="@+id/department_name"/>
     </LinearLayout>
+
 </LinearLayout>
 </ScrollView>
