heads data added on server

--- a/app/src/main/res/layout/fragment_departments.xml
+++ b/app/src/main/res/layout/fragment_departments.xml
@@ -11,4 +11,9 @@
         android:layout_height="match_parent"
         android:id="@+id/departments">
     </ListView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/heads"
+        android:visibility="invisible"/>
 </FrameLayout>
