--- a/app/src/main/res/layout/swipefragment2.xml
+++ b/app/src/main/res/layout/swipefragment2.xml
@@ -22,15 +22,16 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
             android:orientation="vertical">
     <ImageView
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/department_image"
         android:layout_marginTop="15dp"
         android:src="@mipmap/acmlogo"/>
         <TextView
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Current Head"
             android:textColor="#000"
@@ -39,10 +40,10 @@
             android:layout_marginTop="10dp"
             android:gravity="center"/>
         <TextView
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/head"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:gravity="center"
             android:textColor="#000"/>
         </LinearLayout>
