--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,9 +20,7 @@
         <item
             android:id="@+id/liveupdates"
             android:title="Live Updates" />
-        <item
-            android:id="@+id/projects"
-            android:title="Projects" />
+
         <item
             android:id="@+id/departments"
             android:title="Departments" />
@@ -30,8 +28,12 @@
             android:id="@+id/membership"
             android:title="Membership" />
         <item
+            android:id="@+id/sponsors"
+            android:title="Our Sponsors" />
+        <item
             android:id="@+id/conactus"
             android:title="Contact Us" />
+
     </group>
 
 
