--- a/app/src/main/res/layout/fragment_departments.xml
+++ b/app/src/main/res/layout/fragment_departments.xml
@@ -2,13 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="#fff"
     tools:context="com.example.ashi.a1myapplication.Departments">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         android:id="@+id/departments">
     </ListView>
     <TextView
