--- a/app/src/main/res/layout/customadapter3.xml
+++ b/app/src/main/res/layout/customadapter3.xml
@@ -7,15 +7,18 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:foreground="@drawable/circle"
         android:id="@+id/adapterimage"
+        android:padding="10dp"
         />
     <TextView
         android:id="@+id/adaptertext"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:textStyle="bold"
         android:gravity="center"
+        android:padding="10dp"
         android:textColor="#000"
         />
 </LinearLayout>
