--- a/app/src/main/res/layout/activity_after_registration.xml
+++ b/app/src/main/res/layout/activity_after_registration.xml
@@ -36,12 +36,14 @@
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
+        android:id="@+id/transaction"
         android:hint="Enter Transaction Id "/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="18sp"
+        android:id="@+id/submit"
         android:layout_marginTop="10dp"
         android:text="Submit"/>
     <TextView
