--- a/app/src/main/res/layout/activity_full_screen_image.xml
+++ b/app/src/main/res/layout/activity_full_screen_image.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#000"
     tools:context="com.example.ashi.a1myapplication.Full_screen_image">
     <android.support.v4.view.ViewPager
@@ -12,4 +13,9 @@
         android:layout_height="match_parent"
         android:id="@+id/viewpager">
     </android.support.v4.view.ViewPager>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list"
+        android:visibility="invisible"/>
 </LinearLayout>
